--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "centenofire",
+  "name": "centenoloyalty",
   "homepage": "https://felipegerardo.github.io/centenoloyalty/",
   "private": true,
   "version": "0.0.0",
